// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should have the correct circle styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: #E6E6E6;
  color: #1A1A1A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 2px 4px;
  height: 24px;
  width: 24px;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with alert styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: #D23F47;
  color: #FFF;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with confirm styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: #138849;
  color: #FFF;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with default styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: #E6E6E6;
  color: #1A1A1A;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with neutral styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: #E6E6E6;
  color: #1A1A1A;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with notify styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: #F6CC1B;
  color: #1A1A1A;
}

<div
  class="circuit-0"
/>
`;

exports[`Badge should render with promo styles 1`] = `
.circuit-0 {
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: #CA58FF;
  color: #FFF;
}

<div
  class="circuit-0"
/>
`;
